# sg-experiment-battle-calculator-cpp

./: .gitignore  meson.build
src/: battle_calculator.cpp  battle_calculator.h  bench.cpp  fightable.h  main.cpp  ships.cpp  ships.h  tests.cpp
